test-privileged-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: t-privileged
spec:
  containers:
  - name: test-container
    image: nginx
    securityContext:
      privileged: true  # Violazione della policy di privilegi
      allowPrivilegeEscalation: true  # Violazione della policy di privilege escalation
