hostpath-restriction-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: hostpathrestriction
spec:
  crd:
    spec:
      names:
        kind: HostPathRestriction
      validation:
        openAPIV3Schema:
          type: object
          properties:
            forbiddenPaths:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package hostpath.restriction

        violation[{"msg": msg}] {
          volume := input.review.object.spec.volumes[_]
          hostPath := volume.hostPath.path
          forbiddenPath := input.parameters.forbiddenPaths[_]
          hostPath == forbiddenPath
          msg := sprintf("HostPath %s is forbidden", [hostPath])
        }
